# planar_mesh

./: .gitignore  CMakeLists.txt  CMakeLists_cgal.txt  README.md  package.xml
include/Cache/: FIFOCache.hpp  FIFOCache.tpp  LRUCache.hpp  LRUCache.tpp
include/MeshObject/: Application.hpp  Edge.hpp  EdgeBVH.hpp  Face.hpp  GenericPoint.hpp  InteractiveViewer.hpp  InteriorPoint.hpp  MeshObject.hpp  RRSTree.hpp  Settings.hpp  Simulation.hpp  Storage.hpp  Surface.hpp  TriangleBVH.hpp  UnionFind.hpp  Vert.hpp  Vertex.hpp
include/eye_patch/: Algorithm.hpp  BVH.hpp  BagPointT.hpp  DataLoader.hpp  EyePointT.hpp  KDTree.hpp  PolarCloudSearch.hpp  RRSTree.hpp  TriangleBVH.hpp  VilensPointT.hpp  Visualization.hpp  eye_patch_algo.hpp  eye_patch_ros.hpp  flann3d.hpp  utilities.hpp
include/point_type/: BagPointT.hpp  VilensPointT.hpp
include/utilities/: DataLoader.hpp  covariance_math.hpp  gtsam_plane.hpp  gtsam_plane_2d.hpp  omp_utilities.hpp  optimization.hpp  queue_or_stack.hpp  queue_or_stack.tpp  simplified_mesh.hpp  utilities.hpp  utilities.tpp
python/: read_vilens_output.py
rviz/: rviz.rviz
src/: MeshObject_test.cpp  PolarCloudSearch.cpp  RRSTree_test.cpp  Surface_test.cpp  TriangleBVH.cpp  TriangleBVH_test.cpp  add_mesh_to_mesh.cpp  draft.cpp  eye_patch_algo.cpp  eye_patch_ros.cpp  flann3d.cpp  main.cpp  optimization.cpp  ros2_node.cpp  temp  temp.cpp  temp_non_meshobject.cpp  tutorial_publisher.cpp  tutorial_subscriber.cpp  tutorial_tf.cpp
src/MeshObject/: Application.cpp  Edge.cpp  EdgeBVH.cpp  Face.cpp  GenericPoint.cpp  InteractiveViewer.cpp  InteriorPoint.cpp  MeshObject.cpp  RRSTree.cpp  Settings.cpp  Simulation.cpp  Storage.cpp  Surface.cpp  TriangleBVH.cpp  UnionFind.cpp  Vert.cpp  Vertex.cpp
src/test/: MeshObject_test.cpp  RRSTree_test.cpp  Surface_test.cpp  TriangleBVH_test.cpp  covariance_math_test.cpp  test_MeshObjectHash.cpp  test_RRSTree.cpp  test_Simulation.cpp  test_UnionFind.cpp  test_add_remove_point_from_surface_fitting.cpp  test_cgal.cpp  test_gtsam_plane.cpp  test_gtsam_plane_2d.cpp
src/utilities/: DataLoader.cpp  covariance_math.cpp  gtsam_plane.cpp  gtsam_plane_2d.cpp  omp_utilities.cpp  optimization.cpp  simplified_mesh.cpp  utilities.cpp
